k8/config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: rendermart
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/ # Toutes les requêtes qui commencent par /api vont au backend
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80

          - path: / # Tout le reste va au frontend
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
